Added code and image

--- a/week02/index.html
+++ b/week02/index.html
@@ -1,1 +1,14 @@
-Okay why isnt this working
+
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title>Look at this Floof. </title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <h1>He's so good.</h1>
+  <img src="missgooby.github.io/week02/cat-4541889_640.jpg"
+       alt="Black Floofy">
+</body>
+</html>
