--- a/week02/index.html
+++ b/week02/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>He's so good.</h1>
+  <h1>He's so good!</h1>
   <img src="missgooby.github.io/week02/cat-4541889_640.jpg"
        alt="Black Floofy">
 </body>
