--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Can't decide what to eat tonight?</h1>
+  <h1>You can't decide what to eat tonight?</h1>
   <p>One of the most difficult problems a person faces as they enter into adulthood is the constant confusion on what to eat tongiht. </p>
   <h2>This website is here to help.</h2>
 
