--- a/week02/index.html
+++ b/week02/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>He's so good!</h1>
-  <img src="missgooby.github.io/week02/cat-4541889_640.jpg"
+  <img src="https://missgooby.github.io/week02/cat-4541889_640.jpg"
        alt="Black Floofy">
 </body>
 </html>
