--- a/week02/index.html
+++ b/week02/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>He's so good!</h1>
+  <p><a href="https://missgooby.github.io/week02/coding101.html">link check out my coding101 page!</a></p>
   <img src="https://missgooby.github.io/week02/cat-4541889_640.jpg"
        alt="Black Floofy">
 </body>
