--- a/week02/coding101.html
+++ b/week02/coding101.html
@@ -8,8 +8,8 @@
 <body>
   <h1>You can't decide what to eat tonight?</h1>
   <p>One of the most difficult problems a person faces as they enter into adulthood is the constant confusion on what to eat tongiht. </p>
-  <p><a href="https://codepen.io/missgooby/pen/QWgKejm">link I have a working code of this site here!</a></p>
-   <p><a href="https://missgooby.github.io/week02/index.html">link Look at him. Or else.</a></p>
+  <p><a href="https://codepen.io/missgooby/pen/QWgKejm">I have a working code of this site here!</a></p>
+   <p><a href="https://missgooby.github.io/week02/index.html">Look at him. Or else.</a></p>
   <h2>This website is here to help.</h2>
 
 <p>I'm going to make it real easy and give you only three food options with the needed ingredients. The foods that will never do you wrong when you don't know what to eat are:</p>
