--- a/week03/index.html
+++ b/week03/index.html
@@ -1,3 +1,19 @@
+Skip to content
+
+Search…
+All gists
+Back to GitHub
+@missgooby
+@idtprof
+idtprof/cssdesigner.html
+Created 12 months ago • Report abuse
+0
+0
+ Code
+ Revisions 2
+<script src="https://gist.github.com/idtprof/0abd6b2ed55cccd913502e6010d97d2e.js"></script>
+CSS Designer code
+cssdesigner.html
 <!doctype html>
 <html>
    <head>
@@ -50,3 +66,20 @@
       </footer>
    </body>
 </html>
+@missgooby
+
+Leave a comment
+No file chosen
+Attach files by dragging & dropping, selecting or pasting them.
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
