--- a/week07/fortune.html
+++ b/week07/fortune.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Look into your future</h1>
-    <script scr="future.js">
+    <script src="future.js">
     </script>
     <button onClick="window.location.href=window.location.href">Refresh Page</button>
   </body>
